--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
-    "expo-location": "~16.5.5"
+    "expo-location": "~16.5.5",
+    "expo-barcode-scanner": "~12.9.3",
+    "expo-camera": "~14.1.1",
+    "undefined": "expo-camera/next"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
