--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
+    "expo": "~50.0.17",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
-    "expo-splash-screen": "~0.26.4",
+    "expo-router": "~3.4.10",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
+    "expo-system-ui": "~2.9.4",
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -38,8 +38,7 @@
     "react-native-web": "~0.19.6",
     "expo-location": "~16.5.5",
     "expo-barcode-scanner": "~12.9.3",
-    "expo-camera": "~14.1.1",
-    "undefined": "expo-camera/next"
+    "expo-camera": "~14.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
