--- a/app.json
+++ b/app.json
@@ -12,9 +12,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
@@ -23,6 +21,7 @@
       }
     },
     "android": {
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -33,7 +32,12 @@
         "android.permission.CAMERA",
         "android.permission.RECORD_AUDIO"
       ],
-      "package": "com.ayanooo315.cycling"
+      "package": "com.ayanooo315.cycling",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDm9pPMTMrXoIof6QiL2OuBaMeRRfVDdCQ"
+        }
+      }
     },
     "web": {
       "bundler": "metro",
@@ -41,6 +45,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      ["@react-native-firebase/app", "@react-native-firebase/auth"],
       "expo-router",
       [
         "expo-location",
