--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-firebase/app": "^19.2.2",
     "@react-native-firebase/auth": "^19.2.2",
     "@react-native-firebase/firestore": "^19.2.2",
+    "@react-native-firebase/messaging": "^19.2.2",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.8",
     "expo": "~50.0.19",
     "expo-barcode-scanner": "~12.9.3",
+    "expo-build-properties": "~0.11.1",
     "expo-camera": "~14.1.3",
     "expo-dev-client": "~3.3.12",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-location": "~16.5.5",
+    "expo-notifications": "~0.27.7",
     "expo-router": "~3.4.10",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
@@ -42,10 +46,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "expo-notifications": "~0.27.7",
-    "expo-build-properties": "~0.11.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
